[workspace]
resolver = "2"
members = [
    "boards/adafruit-feather-rp2040",
    "boards/adafruit-itsy-bitsy-rp2040",
    "boards/adafruit-kb2040",
    "boards/adafruit-macropad",
    "boards/adafruit-metro-rp2040",
    "boards/adafruit-qt-py-rp2040",
    "boards/adafruit-trinkey-qt2040",
    "boards/arduino_nano_connect",
    "boards/boardsource-blok",
    "boards/pimoroni_badger2040",
    "boards/pimoroni-pico-explorer",
    "boards/pimoroni-pico-lipo-16mb",
    "boards/pimoroni-plasma-2040",
    "boards/pimoroni-servo2040",
    "boards/pimoroni-tiny2040",
    "boards/rp-pico",
    "boards/seeeduino-xiao-rp2040",
    "boards/solderparty-rp2040-stamp",
    "boards/sparkfun-micromod-rp2040",
    "boards/sparkfun-pro-micro-rp2040",
    "boards/sparkfun-thing-plus-rp2040",
    "boards/vcc-gnd-yd-rp2040",
    "boards/waveshare-rp2040-zero",
    "boards/waveshare-rp2040-lcd-0-96",
]

[workspace.dependencies]
arrayvec = { version = "0.7.4", default-features = false }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
critical-section = "1.1.2"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-hal ="0.2.7"
embedded-sdmmc = "0.5.0"
fugit = "0.3.7"
hd44780-driver = "0.4.0"
heapless = "0.7.16"
i2c-pio = "0.7.0"
nb = "1.1"
panic-halt= "0.2.0"
panic-probe = "0.3.1"
pio = "0.2.1"
pio-proc = "0.2.2"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.9.0"
st7789 = "0.6.1"
st7735-lcd = "0.8.1"
smart-leds = "0.3.0"
ssd1306 = "0.7.1"
usb-device = "0.2.9"
usbd-hid = "0.5.2"
usbd-serial = "0.1.1"
ws2812-pio = "0.7.0"
