[package]
name = "rp-pico"
version = "0.8.0"
authors = ["evan <evanmolder@gmail.com>", "The rp-rs Developers"]
edition = "2018"
homepage = "https://github.com/rp-rs/rp-hal-boards/tree/main/boards/rp-pico"
description = "Board Support Package for the Raspberry Pi Pico"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rp-rs/rp-hal-boards.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = { version = "0.7", optional = true }
fugit = "0.3.7"
rp2040-boot2 = { version = "0.3.0", optional = true }
rp2040-hal = { version = "0.9.0" }
usb-device = "0.2.9"

[dev-dependencies]
cortex-m = "0.7.7"
cortex-m-rtic = "1.1.4"
critical-section = "1.1.2"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
embedded-sdmmc = "0.5.0"
hd44780-driver = "0.4.0"
heapless = "0.7.16"
i2c-pio = "0.7.0"
nb = "1.1"
panic-halt = "0.2.0"
pio = "0.2.1"
pio-proc = "0.2.2"
rp2040-hal = { version = "0.9.0", features = ["defmt"] }
smart-leds = "0.3.0"
ssd1306 = "0.7.1"
usbd-hid = "0.5.2"
usbd-serial = "0.1.1"
ws2812-pio = "0.7.0"

defmt = "0.3.5"
defmt-rtt = "0.4.0"

[features]
# This is the set of features we enable by default
default = ["boot2", "rt", "critical-section-impl", "rom-func-cache"]

# critical section that is safe for multicore use
critical-section-impl = ["rp2040-hal/critical-section-impl"]

# 2nd stage bootloaders for rp2040
boot2 = ["rp2040-boot2"]

# Minimal startup / runtime for Cortex-M microcontrollers
rt = ["cortex-m-rt", "rp2040-hal/rt"]

# This enables a fix for USB errata 5: USB device fails to exit RESET state on busy USB bus.
# Only required for RP2040 B0 and RP2040 B1, but it also works for RP2040 B2 and above
rp2040-e5 = ["rp2040-hal/rp2040-e5"]

# Memoize(cache) ROM function pointers on first use to improve performance
rom-func-cache = ["rp2040-hal/rom-func-cache"]

# Disable automatic mapping of language features (like floating point math) to ROM functions
disable-intrinsics = ["rp2040-hal/disable-intrinsics"]

# This enables ROM functions for f64 math that were not present in the earliest RP2040s
rom-v2-intrinsics = ["rp2040-hal/rom-v2-intrinsics"]

# Support alpha release of embedded-hal
eh1_0_alpha = ["rp2040-hal/eh1_0_alpha"]

[[example]]
name = "pico_rtic_monotonic"
required-features = ["rp2040-hal/rtic-monotonic"]
